// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input does not contains string 1`] = `
<Valle(Input)
  contains="Hi"
>
  <Input
    message="This does not contain Hi. Please check your value and try again."
    valid={false}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div>
        This does not contain Hi. Please check your value and try again.
      </div>
    </div>
  </Input>
</Valle(Input)>
`;

exports[`It sould be valid if input contains string 1`] = `
<Valle(Input)
  contains="jessy"
>
  <Input
    message=""
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Valle(Input)>
`;

exports[`It sould be valid if input is empty 1`] = `
<Valle(Input)
  contains="jessy"
>
  <Input
    message=""
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Valle(Input)>
`;
